force-app/main/default/objects/PIMProduct__c/PIMProduct__c.object-meta.xml
<CustomObject>
    <description>Colección de atributos de productos sincronizados desde el PIM</description>
    <label>PIM Product</label>
    <nameField>
        <label>PIM Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PIM Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>