force-app/main/default/objects/PIMProduct__c/fields/Adhesives__c.field-meta.xml
<CustomField>
    <fullName>Adhesives__c</fullName>
    <label>Adhesives</label>
    <length>200</length>
    <type>Text</type>
</CustomField>