force-app/main/default/objects/PIMProduct__c/fields/AdhesivesWetAreas__c.field-meta.xml
<CustomField>
    <fullName>AdhesivesWetAreas__c</fullName>
    <label>Adhesives Wet Areas</label>
    <length>200</length>
    <type>Text</type>
</CustomField>