force-app/main/default/objects/PIMProduct__c/fields/Antislip__c.field-meta.xml
<CustomField>
    <fullName>Antislip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Antislip</label>
    <type>Checkbox</type>
</CustomField>