force-app/main/default/objects/PIMProduct__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Marca del producto</description>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
                <label>PORCELANOSA</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>BUTECH</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>GAMA DECOR</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>L&apos;ANTIC COLONIAL</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>NOKEN</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>KRION</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>