force-app/main/default/objects/PIMProduct__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>CLASCOMERCIAL</description>
    <label>Classification</label>
    <length>200</length>
    <type>Text</type>
</CustomField>