force-app/main/default/objects/PIMProduct__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ANTRACITA</fullName>
                <label>ANTHRACITE</label>
            </value>
            <value>
                <fullName>BEIGE</fullName>
            </value>
            <value>
                <fullName>NEGRO</fullName>
                <label>BLACK</label>
            </value>
            <value>
                <fullName>MARRON</fullName>
                <label>BROWN</label>
            </value>
            <value>
                <fullName>CEMENTO</fullName>
                <label>CEMENT</label>
            </value>
            <value>
                <fullName>CREMA</fullName>
                <label>CREAM</label>
            </value>
            <value>
                <fullName>CROMADO</fullName>
            </value>
            <value>
                <fullName>ORO</fullName>
                <label>GOLD</label>
            </value>
            <value>
                <fullName>GRIS</fullName>
                <label>GREY</label>
            </value>
            <value>
                <fullName>HONEY</fullName>
            </value>
            <value>
                <fullName>MARFIL</fullName>
                <label>IVORY</label>
            </value>
            <value>
                <fullName>CALIZA</fullName>
                <label>LIMESTONE</label>
            </value>
            <value>
                <fullName>ESPEJO</fullName>
                <label>MIRROR</label>
            </value>
            <value>
                <fullName>PLATA</fullName>
                <label>SILVER</label>
            </value>
            <value>
                <fullName>ACERO</fullName>
                <label>STEEL</label>
            </value>
            <value>
                <fullName>BLANCO</fullName>
                <label>WHITE</label>
            </value>
            <value>
                <fullName>MADERA</fullName>
                <label>WOOD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>