force-app/main/default/objects/PIMProduct__c/fields/Effect__c.field-meta.xml
<CustomField>
    <fullName>Effect__c</fullName>
    <label>Effect</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEMENTO</fullName>
                <label>CONCRETE</label>
            </value>
            <value>
                <fullName>MARMOL</fullName>
                <label>MARBLE</label>
            </value>
            <value>
                <fullName>OXIDO</fullName>
                <label>OXIDE</label>
            </value>
            <value>
                <fullName>MONOCOLOR</fullName>
                <label>SOLID COLOUR</label>
            </value>
            <value>
                <fullName>PIEDRA</fullName>
                <label>STONE</label>
            </value>
            <value>
                <fullName>TEXTURA</fullName>
                <label>TEXTURE</label>
            </value>
            <value>
                <fullName>MADERA</fullName>
                <label>WOOD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>