force-app/main/default/objects/PIMProduct__c/fields/FactoryStatus__c.field-meta.xml
<CustomField>
    <fullName>FactoryStatus__c</fullName>
    <label>Factory Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>DISCONTINUED</fullName>
            </value>
            <value>
                <fullName>REMOVED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>