force-app/main/default/objects/PIMProduct__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <length>40</length>
    <type>Text</type>
</CustomField>