force-app/main/default/objects/PIMProduct__c/fields/Finish1__c.field-meta.xml
<CustomField>
    <fullName>Finish1__c</fullName>
    <label>Finish1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANTIDESLIZANTE</fullName>
                <label>NON-SLIP</label>
            </value>
            <value>
                <fullName>NORMAL</fullName>
                <label>STANDARD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>