force-app/main/default/objects/PIMProduct__c/fields/Finish2__c.field-meta.xml
<CustomField>
    <fullName>Finish2__c</fullName>
    <label>Finish2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BRILLO</fullName>
                <label>GLOSS</label>
            </value>
            <value>
                <fullName>MATE</fullName>
                <label>MATTE</label>
            </value>
            <value>
                <fullName>MATE-BRILLO</fullName>
                <label>MATTE-GLOSS</label>
            </value>
            <value>
                <fullName>NATURE</fullName>
            </value>
            <value>
                <fullName>PULIDO</fullName>
                <label>POLISHED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>