force-app/main/default/objects/PIMProduct__c/fields/IsTile__c.field-meta.xml
<CustomField>
    <fullName>IsTile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tile</label>
    <type>Checkbox</type>
</CustomField>