force-app/main/default/objects/PIMProduct__c/fields/JointMaterials__c.field-meta.xml
<CustomField>
    <fullName>JointMaterials__c</fullName>
    <label>Joint Materials</label>
    <length>200</length>
    <type>Text</type>
</CustomField>