force-app/main/default/objects/PIMProduct__c/fields/JointMaterialWetAreas__c.field-meta.xml
<CustomField>
    <fullName>JointMaterialWetAreas__c</fullName>
    <label>Joint Material Wet Areas</label>
    <length>200</length>
    <type>Text</type>
</CustomField>