force-app/main/default/objects/PIMProduct__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length (mm)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>