force-app/main/default/objects/PIMProduct__c/fields/ProductApplication__c.field-meta.xml
<CustomField>
    <fullName>ProductApplication__c</fullName>
    <label>Product Application</label>
    <length>30</length>
    <type>Text</type>
</CustomField>