force-app/main/default/objects/PIMProduct__c/fields/RawValue__c.field-meta.xml
<CustomField>
    <fullName>RawValue__c</fullName>
    <label>Raw Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>