force-app/main/default/objects/PIMProduct__c/fields/Rectified__c.field-meta.xml
<CustomField>
    <fullName>Rectified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rectified</label>
    <type>Checkbox</type>
</CustomField>