force-app/main/default/objects/PIMProduct__c/fields/Relief__c.field-meta.xml
<CustomField>
    <fullName>Relief__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relief</label>
    <type>Checkbox</type>
</CustomField>