force-app/main/default/objects/PIMProduct__c/fields/SlipResistance__c.field-meta.xml
<CustomField>
    <fullName>SlipResistance__c</fullName>
    <label>Barefoot Slip Resistance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
                <default>true</default>
                <label>-</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Slip Resistance A (12°–18°)</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Slip Resistance B (18°–24°)</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Slip Resistance C (&gt;24°)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>