force-app/main/default/objects/PIMProduct__c/fields/SpecialPieces__c.field-meta.xml
<CustomField>
    <fullName>SpecialPieces__c</fullName>
    <label>Special Pieces</label>
    <length>200</length>
    <type>Text</type>
</CustomField>