force-app/main/default/objects/PIMProduct__c/fields/StandardDescription__c.field-meta.xml
<CustomField>
    <fullName>StandardDescription__c</fullName>
    <label>Standard Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>