force-app/main/default/objects/PIMProduct__c/fields/StandardFormat__c.field-meta.xml
<CustomField>
    <fullName>StandardFormat__c</fullName>
    <label>Standard Format</label>
    <length>60</length>
    <type>Text</type>
</CustomField>