force-app/main/default/objects/PIMProduct__c/fields/StockKeepingUnit__c.field-meta.xml
<CustomField>
    <fullName>StockKeepingUnit__c</fullName>
    <label>SKU</label>
    <length>12</length>
    <type>Text</type>
</CustomField>