force-app/main/default/objects/PIMProduct__c/fields/Thickness__c.field-meta.xml
<CustomField>
    <fullName>Thickness__c</fullName>
    <description>mm</description>
    <label>Thickness (mm)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>