force-app/main/default/objects/PIMProduct__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>18</fullName>
                <label>ACCESSORIES</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>INSTALLATION ADHESIVES</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>CERAMIC TILES</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>BATHTUBS</label>
            </value>
            <value>
                <fullName>87</fullName>
                <label>DECOUPLING</label>
            </value>
            <value>
                <fullName>47</fullName>
                <label>MIRRORS</label>
            </value>
            <value>
                <fullName>62</fullName>
                <label>LARGE FORMAT</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>BATHROOM FAUCETS (BRASSWARE)</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>WATERPROOFING</label>
            </value>
            <value>
                <fullName>68</fullName>
                <label>KRION INSTALLATION</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>KRION</label>
            </value>
            <value>
                <fullName>49</fullName>
                <label>BASINS AND COUNTERTOPS</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>SHOWER ENCLOSURES</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>GROUTING MATERIALS</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>MOSAICS AND DECORATIONS</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>COMPACT BATHROOM FURNITURE</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>WOOD FLOORING</label>
            </value>
            <value>
                <fullName>93</fullName>
                <label>DECORATIVE PROFILES</label>
            </value>
            <value>
                <fullName>95</fullName>
                <label>TECHNICAL PROFILES</label>
            </value>
            <value>
                <fullName>89</fullName>
                <label>DRAINAGE GRILLES</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>SANITARYWARE</label>
            </value>
            <value>
                <fullName>92</fullName>
                <label>LEVELING SYSTEMS</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>VINYL FLOORING</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>