force-app/main/default/objects/PIMProduct__c/fields/Typology__c.field-meta.xml
<CustomField>
    <fullName>Typology__c</fullName>
    <label>Typology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>BATHROOM ACCESSORIES</label>
            </value>
            <value>
                <fullName>131</fullName>
                <label>FAUCET ACCESSORIES</label>
            </value>
            <value>
                <fullName>091</fullName>
                <label>BASIN ACCESSORIES</label>
            </value>
            <value>
                <fullName>130</fullName>
                <label>SANITARYWARE ACCESSORIES</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>BATHTUBS</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>CERAMIC TILES</label>
            </value>
            <value>
                <fullName>122</fullName>
                <label>XLIGHT CERAMIC</label>
            </value>
            <value>
                <fullName>162</fullName>
                <label>DECOUPLING MEMBRANES</label>
            </value>
            <value>
                <fullName>022</fullName>
                <label>MIRRORS</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>MANUFACTURING - GROUTING MATERIALS</label>
            </value>
            <value>
                <fullName>031</fullName>
                <label>WATERPROOFING</label>
            </value>
            <value>
                <fullName>090</fullName>
                <label>KRION ACCESSORIES</label>
            </value>
            <value>
                <fullName>088</fullName>
                <label>KRION BASINS</label>
            </value>
            <value>
                <fullName>084</fullName>
                <label>KRION PANELS</label>
            </value>
            <value>
                <fullName>034</fullName>
                <label>BASINS</label>
            </value>
            <value>
                <fullName>109</fullName>
                <label>LINKFLOOR</label>
            </value>
            <value>
                <fullName>092</fullName>
                <label>GLASS LISTELLOS</label>
            </value>
            <value>
                <fullName>036</fullName>
                <label>SHOWER ENCLOSURES</label>
            </value>
            <value>
                <fullName>085</fullName>
                <label>SETTING MATERIALS (ADHESIVES)</label>
            </value>
            <value>
                <fullName>038</fullName>
                <label>GROUTING MATERIALS</label>
            </value>
            <value>
                <fullName>041</fullName>
                <label>WOOD MOSAICS</label>
            </value>
            <value>
                <fullName>042</fullName>
                <label>MIXED MOSAICS</label>
            </value>
            <value>
                <fullName>045</fullName>
                <label>GLASS MOSAICS</label>
            </value>
            <value>
                <fullName>040</fullName>
                <label>CERAMIC MOSAICS &amp; DECORATIONS</label>
            </value>
            <value>
                <fullName>043</fullName>
                <label>NATURAL STONE MOSAICS &amp; DECORATIONS</label>
            </value>
            <value>
                <fullName>046</fullName>
                <label>BATHROOM FURNITURE</label>
            </value>
            <value>
                <fullName>049</fullName>
                <label>WOOD FLOORING (PARQUET)</label>
            </value>
            <value>
                <fullName>172</fullName>
                <label>DECORATIVE PROFILES</label>
            </value>
            <value>
                <fullName>173</fullName>
                <label>CORNER &amp; FINISHING PROFILES</label>
            </value>
            <value>
                <fullName>170</fullName>
                <label>TECHNICAL PROFILES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>