force-app/main/default/objects/PIMProduct__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <label>Usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PAVIMENTO</fullName>
                <label>FLOOR TILES</label>
            </value>
            <value>
                <fullName>INTENSO-ACCESO-EXTERIOR</fullName>
                <label>INTENSE - EXTERNAL ACCESS</label>
            </value>
            <value>
                <fullName>INTENSO-DESPLZ-CARGA</fullName>
                <label>INTENSE - LOAD DISPLACEMENT</label>
            </value>
            <value>
                <fullName>LIGERO-ACCESO-EXTERIOR</fullName>
                <label>LIGHT - EXTERNAL ACCESS</label>
            </value>
            <value>
                <fullName>MEDIO-ACCESO-EXTERIOR</fullName>
                <label>MEDIUM - EXTERNAL ACCESS</label>
            </value>
            <value>
                <fullName>REVESTIMIENTO</fullName>
                <label>WALL TILES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>