force-app/main/default/objects/PIMProduct__c/fields/USLength__c.field-meta.xml
<CustomField>
    <fullName>USLength__c</fullName>
    <label>Length (in)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>