force-app/main/default/objects/PIMProduct__c/fields/USStandardFormat__c.field-meta.xml
<CustomField>
    <fullName>USStandardFormat__c</fullName>
    <label>US Standard Format</label>
    <length>60</length>
    <type>Text</type>
</CustomField>