force-app/main/default/objects/PIMProduct__c/fields/USThickness__c.field-meta.xml
<CustomField>
    <fullName>USThickness__c</fullName>
    <label>Thickness (in)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>