force-app/main/default/objects/PIMProduct__c/fields/USWidth__c.field-meta.xml
<CustomField>
    <fullName>USWidth__c</fullName>
    <label>Width (in)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>