force-app/main/default/objects/PIMProduct__c/fields/WeightXBox__c.field-meta.xml
<CustomField>
    <fullName>WeightXBox__c</fullName>
    <label>Weight/Box</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>