force-app/main/default/objects/PIMProduct__c/fields/WeightXMt2__c.field-meta.xml
<CustomField>
    <fullName>WeightXMt2__c</fullName>
    <label>Weight/M2</label>
    <precision>8</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>