force-app/main/default/objects/PIMProduct__c/fields/WeightXUni__c.field-meta.xml
<CustomField>
    <fullName>WeightXUni__c</fullName>
    <label>Weight/UNI</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>