force-app/main/default/objects/PIMProduct__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <label>Width (mm)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>